# OpenAIReview

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: paper_review.md
.github/workflows/: publish.yml
benchmarks/: README.md  REPORT.md  suggestion_eval.md
benchmarks/conference_study/: .gitignore  README.md  download_papers.py  estimate_cost.py  paper_metrics.py  run_competitors.py  run_study.py  select_papers.py  snor_loader.py
benchmarks/experimental_perturbations/: experimental.py  experimental_baseline.py  report_experimental.py
benchmarks/openreview_benchmark/: OPENREVIEW.md  REPORT.md  eval_history.jsonl
benchmarks/perturbation/: .gitignore  README.md  __init__.py  _combine_gpt_claude.py  _prepare.py  _severity.py  ci_recall.py  extract.py  generate.py  generate_report.py  inject.py  models.py  perturb.py  perturb_automated.py  reinject_existing.py  related_passages.py  rescue_sessions.py  run_benchmark.py  run_pipeline.py  score.py  threshold_sweep.py  validate.py  verify.py
benchmarks/perturbation2/: run_pipeline.py  score.py
benchmarks/results_iclr_coarse/: analysis.py
review_rounds/: DESIGN.md  NOTES.md  __init__.py  models.py  review_rounds.py  viz.py
standard/: README.md  profile-api.md  profile-cli.md  validate.py
tests/: test_ci_auc.py  test_ci_recall.py  test_generate_prompts.py  test_lighton.py  test_lighton_transformers.py  test_models.py  test_parsers.py  test_perturbation_score.py  test_prompts.py  test_related_passages.py  test_score_review.py  test_utils.py  test_verify.py
(+1356 files in other folders)
